--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,19 +1,19 @@
-h1, h2, h3 {
+#header {
+  font-size: 50px;
+}
+
+h1, h2 {
   font-family: Verdana;
-  }
+  color: white;
+  text-align: center;
+}
 
 * {
   background-color: black;
   text-align: center;
 }
 
-#header {
-  font-weight: normal;
-  font-size: 50px;
-  color: white;
-}
-
 .link {
-  color: Aquamarine;
+  color: aquamarine;
   font-size: 16px;
 }
