--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,20 @@
 #header {
   font-size: 50px;
+  color: white;
+  font-family: Verdana;
+  text-align: center;
 }
 
 h1, h2 {
   font-family: Verdana;
   color: white;
   text-align: center;
+}
+
+h3 {
+  font-family: Verdana;
+  font-size: 21px;
+  color: gray;
 }
 
 * {
