--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,28 +1,27 @@
-#header {
-  font-size: 50px;
-  color: white;
-  font-family: Verdana;
+* {
+  background-color: black;
   text-align: center;
+  font-family: Verdana;
 }
 
-h1, h2 {
-  font-family: Verdana;
+h1 {
+  font-weight: normal;
+  font-size: 50px;
   color: white;
-  text-align: center;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
 }
 
 h3 {
-  font-family: Verdana;
   font-size: 21px;
   color: gray;
 }
 
-* {
-  background-color: black;
-  text-align: center;
-}
-
-.link {
-  color: aquamarine;
-  font-size: 16px;
+#copyright {
+  text-align: right;
+  color: gray;
 }
