--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,7 +21,12 @@ h3 {
   color: gray;
 }
 
-#copyright {
+#links {
+  color: Aquamarine;
+  font-size: 16px;
+}
+
+p {
   text-align: right;
   color: gray;
 }
